[project]
name = "subflow-api"
version = "0.1.0"
description = "SubFlow REST API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "redis>=5.0",
    "psycopg[binary]>=3.2",
    "boto3>=1.35",
    "subflow",
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.27"]

[tool.uv.sources]
subflow = { path = "../../libs/subflow", editable = true }

[tool.ruff]
line-length = 100
