[project]
name = "subflow-worker"
version = "0.1.0"
description = "SubFlow background worker"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0",
    "psycopg[binary]>=3.2",
    "boto3>=1.35",
    "subflow",
    "demucs>=4.0.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchcodec>=0.9.1",
    "nemo-toolkit[asr]>=2.2.1",
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.uv.sources]
subflow = { path = "../../libs/subflow", editable = true }

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
  "ignore:.*AbstractEventLoopPolicy.*:DeprecationWarning:pytest_asyncio\\..*",
]
