[project]
name = "subflow"
version = "0.1.0"
description = "Video semantic translation core library"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "tenacity>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["libs/subflow"]

[tool.ruff]
line-length = 100
