[project]
name = "subflow"
version = "0.1.0"
description = "Video semantic translation core library"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "tenacity>=8.0",
    "redis>=5.0",
    "psycopg[binary,pool]>=3.2",
    "boto3>=1.35",
    "imageio-ffmpeg>=0.6.0",
]

[dependency-groups]
dev = ["mypy>=1.8", "pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["subflow"]
include = ["subflow/py.typed"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
